--- a/config/.env
+++ b/config/.env
@@ -1,6 +1,8 @@
 PORT=3000
-NODE_ENV=dev
+NODE_ENV=development
 DB_URL=your-dev-db-url
 DB_NAME=your-dev-db-name
+
+# serverless
 STAGE=dev
 REGION=us-east-1
