--- a/config/.env.production
+++ b/config/.env.production
@@ -1,6 +1,8 @@
 PORT=3000
-NODE_ENV=prod
+NODE_ENV=production
 DB_URL=your-prod-db-url
 DB_NAME=your-prod-db-name
+
+# serverless
 STAGE=prod
 REGION=us-east-1
